--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
 
-  mongo:
+  crm_mongo:
     image: mongo:latest
-    container_name: mongo
+    container_name: crm_mongo
     ports:
       - "27017:27017"
     volumes:
-      - data:/data/db
+      - ./data:/data/db
     networks:
       - network
     environment:
@@ -14,7 +14,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: root
       MONGO_INITDB_DATABASE: crm
 
-  compass:
+  crm_compass:
     image: mongo-express
     container_name: compass
     ports:
@@ -22,27 +22,23 @@ services:
     networks:
       - network
     environment:
-      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_SERVER: crm_mongo
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: root
       ME_CONFIG_BASICAUTH_USERNAME: root
       ME_CONFIG_BASICAUTH_PASSWORD: root
-      ME_CONFIG_MONGODB_URL: mongodb://root:root@mongo:27017/
+      ME_CONFIG_MONGODB_URL: mongodb://root:root@crm_mongo:27017/
     depends_on:
-      - mongo
+      - crm_mongo
 
-  mailer:
+  crm_mailer:
       image: mailhog/mailhog
-      container_name: mailer
+      container_name: crm_mailer
       ports:
       - "1030:1025"
       - "8030:8025"
       networks:
       - network
-
-volumes:
-  data:
-    driver: local
 
 networks:
   network:
