--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.17"
+    "@tailwindcss/vite": "^4.1.11",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
+    "@vue/babel-preset-jsx": "^1.4.0",
+    "axios": "^1.10.0",
+    "i18n": "^0.15.1",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
+    "tailwindcss": "^4.1.11",
+    "vue": "^3.5.17",
+    "vue-i18n": "^11.1.9",
+    "vue-route": "^1.5.1",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-jsx": "^7.25.9",
     "@vitejs/plugin-vue": "^6.0.0",
+    "@vue/babel-plugin-jsx": "^1.2.5",
+    "daisyui": "^5.0.46",
     "vite": "^7.0.4"
   }
 }
