--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
+    "multer": "^2.0.1",
     "node-cron": "^4.1.0",
     "nodemailer": "^6.10.0",
     "nodemailer-smtp-transport": "^2.7.4",
