--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/babel-plugin-jsx": "^1.2.5",
     "daisyui": "^5.0.46",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-vue-devtools": "^7.7.0"
   }
 }
