--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@primeuix/themes": "^1.2.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -26,6 +27,8 @@
     "nodemailer": "^6.10.0",
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^3.1.9",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.6",
     "twig": "^1.17.1"
   },
   "devDependencies": {
