--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.2.1",
     "@tailwindcss/vite": "^4.1.11",
     "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
     "@vue/babel-preset-jsx": "^1.4.0",
@@ -16,6 +17,7 @@
     "i18n": "^0.15.1",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
+    "primevue": "^4.3.6",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-i18n": "^11.1.9",
