--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@vue/babel-helper-vue-jsx-merge-props": "^1.4.0",
     "@vue/babel-preset-jsx": "^1.4.0",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
+    "dayjs": "^1.11.13",
     "i18n": "^0.15.1",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
