--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^3.1.9",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.6",
+    "sharp": "^0.34.3",
     "twig": "^1.17.1"
   },
   "devDependencies": {
