--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "primevue": "^4.3.6",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-i18n": "^11.1.9",
